--- a/web-app/css/public.css
+++ b/web-app/css/public.css
@@ -2,17 +2,22 @@
  
 /* ESTILOS GENERALES */
 
-body { margin:0 auto; padding:0; font-family: Verdana; font-size:11px; color:#000; text-align:center; line-height:1.4em; background:#ffebbe; }
+body { margin:0 auto; padding:0; font-family: Verdana; font-size:11px; color:#000; text-align:center;  background:#ffebbe; }
 html, body {  }
 td {  }
 hr { display: none; }
 img {border:none}
 
+.linea4px {clear:both; width:100%; height:4px; background:#000; margin-top:10px;}
+.linea2px {width:100%; height:2px; background:#000; margin-top:2px; margin-bottom: 10px;}
+
 #wrap {padding-top:10px; }
-#head {width:960px;  margin:0px auto; padding-top:50px; text-align: center;}
+#head {width:960px;  margin:0px auto;  text-align: left;}
 #head h1 {display:none;}
 #content {width:960px; margin:0px auto;}
-#foot {clear:both;  padding:30px; font-size: 9px; margin:0px auto;}
+#foot {clear:both; width:960px; padding:10px 0px 50px 0px; line-height: 1.3em; text-align:left; font-size: 12px; font-weight:normal; margin:0px auto;}
+#foot a {color:#B8002D; text-decoration: underline;}
+
 
 /* ESTILOS TEXTO */
 h2 {font-size: 24px; font-weight: bold; text-transform: uppercase; color:#fff; font-stretch: condensed; padding:10px; }
@@ -20,10 +25,33 @@ h3 {font-size:12px;  padding:10px;}
 p {width:400px; font-size: 12px; margin:0px auto; padding:10px; }
 a {color:#000; text-decoration: underline;}
 .cpo {width:350px; text-align: center; font-size:14px; }
+.title_comunidad {font-family: Georgia; font-size:36px;text-transform: uppercase; font-weight: bold;}
+.title_datos {font-family: Arial; font-size:18px; font-weight: bold; color:#B8002D; text-align:left;}
+.text_datos {font-family: Arial; font-size:18px; font-weight: bold; color:#000; text-align:left; line-height: 1.3em;}
+.pretitle_imex {font-family: Georgia; font-size:30px; font-weight: bold; color:#af6d0e;}
+.title_imex {font-family: Georgia; font-size:60px;text-transform: uppercase; font-weight: bold; color:#B8002D;}
+.text_imex {font-family: Arial; font-size:60px;text-transform: uppercase; font-weight: bold; color:#000;}
+.quote {clear:both; font-family: Georgia; font-size: 14px; text-align: center;}
+.red {color:#B8002D;}
+.nar {color:#af6d0e; font-weight: bold;}
+.title_dest {font-family: Georgia; font-size:58px; color:#000;}
+.text_paises {font-family: Arial; font-size:18px; font-weight: bold; color:#000; text-align:left; line-height: 1.3em;}
+.text_tipo {font-family: Arial; font-size:14px; color:#000; text-align:left; line-height: 1.3em;}
+.bold {font-weight: bold;}
+.flo-left {float:left; padding-right:20px; }
 
 /* COLUMNAS */
-#col1 {width:460px; float:left; text-align:left;padding-left:100px; margin-top:40px;}
-#col2 {width:300px; float:right; margin-top:40px;}
+#col1 {width:380px; float:left; margin-top:20px;}
+#col2 {width:540px; float:right; margin-top:36px; text-align: left;}
+#col3 {width:440px; float:left; margin-top:20px; text-align: right;}
+#col4 {width:440px; float:right; margin-top:20px; text-align: left;}
+#col5 {margin-top:20px;}
+#col6 {clear:both; width:140px;float:left;text-align:right;}
+#col7 {width:800px;float:right; text-align:left; }
+#col8 {width:630px;float:left;text-align:left;}
+#col9 {width:330px;float:right; text-align:right; padding-top: 95px; }
+#col10 {width:440px; float:left;text-align: left;}
+#col11 {width:440px; float:right; text-align: left;}
 
 /* FORMULARIOS */
 .title {display:block; width:350px; color:#fff; background:#000; border:1px solid black; padding:10px; font-size: 16px; font-weight: bold;}
